--- a/add-some-sparkle-extension/manifest.json
+++ b/add-some-sparkle-extension/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Reading time",
+    "name": "the cutest chrome extension ever",
     "version": "1.0",
-    "description": "Add the reading time to Chrome Extension documentation articles",
+    "description": "add the cutest stuff to websites",
     "icons": {
         "16": "images/icon-16.png",
         "32": "images/icon-32.png",
@@ -11,10 +11,9 @@
       },
     "content_scripts": [
     {
-        "js": ["scripts/content.js"],
+        "js": ["scripts/p5.js", "scripts/content.js"],
         "matches": [
-        "https://developer.chrome.com/docs/extensions/*",
-        "https://developer.chrome.com/docs/webstore/*"
+        "<all_urls>"
         ]
     }
     ]
